--- a/DNA_Visualization - Documentation.ipynb
+++ b/DNA_Visualization - Documentation.ipynb
@@ -77,11 +77,19 @@
     "\t$ x = agc, y = tgg $ (and so $y' = cca$)\n",
     "</center></h4>\n",
     "\n",
-    "- at shift $ k = -2, \\begin{smallmatrix} \\hphantom{--} agc \\\\  cca \\end{smallmatrix}$  the distance is: $ 2 + H(a,a) = 2$\n",
-    "- at shift $ k = -1, \\begin{smallmatrix} \\hphantom{-} agc \\\\   cca \\end{smallmatrix}$  &nbsp;&nbsp; the distance is:  $ 1 + H(ag,ca) = 3$\n",
-    "- at shift $ k = \\hphantom{-} 0, \\begin{smallmatrix} agc \\\\   cca \\end{smallmatrix}$  &nbsp;&nbsp;&nbsp;&nbsp; the distance is:  $ 0 + H(agc,cca) = 3$\n",
-    "- at shift $ k = \\hphantom{-} 1, \\begin{smallmatrix} agc  \\\\  cca \\end{smallmatrix}$  &nbsp;&nbsp;&nbsp;&nbsp; the distance is:  $ 1 + H(gc,cc) = 2$\n",
-    "- at shift $ k = \\hphantom{-} 2, \\begin{smallmatrix} agc  \\\\  cca \\end{smallmatrix}$  &nbsp;&nbsp;&nbsp;&nbsp; the distance is: $ 2 + H(c,c) = 2$\n",
+    "- at shift $ k = -2, \\begin{smallmatrix} \\hphantom{--} agc \\\\  cca \\end{smallmatrix}$  &nbsp;&nbsp; the distance is: $ 2 + H(a,a) = 2$\n",
+    "\n",
+    "\n",
+    "- at shift $ k = -1, \\begin{smallmatrix} \\hphantom{-} agc \\\\   cca \\end{smallmatrix}$  &nbsp;&nbsp;&nbsp;&nbsp; the distance is:  $ 1 + H(ag,ca) = 3$\n",
+    "\n",
+    "\n",
+    "- at shift $ k = \\hphantom{-} 0, \\begin{smallmatrix} agc \\\\   cca \\end{smallmatrix}$  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; the distance is:  $ 0 + H(agc,cca) = 3$\n",
+    "\n",
+    "\n",
+    "- at shift $ k = \\hphantom{-} 1, \\begin{smallmatrix} agc  \\\\  \\hphantom{-}cca \\end{smallmatrix}$  &nbsp;&nbsp;&nbsp;&nbsp; the distance is:  $ 1 + H(gc,cc) = 2$\n",
+    "\n",
+    "\n",
+    "- at shift $ k = \\hphantom{-} 2, \\begin{smallmatrix} agc  \\\\  \\hphantom{--} cca \\end{smallmatrix}$  &nbsp;&nbsp; the distance is: $ 2 + H(c,c) = 2$\n",
     "   \n",
     "Thus:\n",
     "<center>\n",
@@ -93,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -211,7 +219,7 @@
     "| 6-mers |  0.92 / 0.56 |\n",
     "| 8-mers |  0.89 / 0.61|\n",
     "\n",
-    "<center>**Table 1.** Noise quality of various nxh bases founded using SaEA, quantified using the expected number of hybridizations of a random pmer and Shannon Entropy of the corresponding distribution (Expected value/Shannon entropy)</center>\n",
+    "<center>Table 1. Noise quality of various nxh bases founded using SaEA, quantified using the expected number of hybridizations of a random pmer and Shannon Entropy of the corresponding distribution (Expected value/Shannon entropy)</center>\n",
     "\n",
     "With this degree of soundness of the _**h-distance**_ approximation for the Gibbs energy in place and this formulation of the Codeword Design problem and the solution of it using a Self-adaptive Evolutionary\n",
     "Algorithm, the discussion of how can use this noncrosshybridizing sets in the DNA Space to visualize a DNA sequence can proceed as follow."
@@ -236,7 +244,7 @@
     "The vector V can be visualized as a 1D signature, or as 2D matrix.\n",
     "\n",
     "<img src=\"Images/encodeBiotic.png\" width=\"400\">\n",
-    "<center>**Figure 1.** Signatures of two plasmid genome in a 2D matrix representation, on a set on noncrosshybridizing probes.</center>\n",
+    "<center>Figure 1. Signatures of two plasmid genome in a 2D matrix representation, on a set on noncrosshybridizing probes.</center>\n",
     "\n",
     "### B. Methodology\n",
     "\n",
@@ -251,7 +259,7 @@
     "The representation takes into account not only one noncrosshybridizing set but three noncrosshybridizing sets of different sizes as show in Figure 2. \n",
     "\n",
     "<img src=\"Images/rgbRepresentation.png\" width=\"400\">\n",
-    "<center>**Figure 2.** RGB color model for a DNA sequence.</center>\n",
+    "<center>Figure 2. RGB color model for a DNA sequence.</center>\n",
     "\n",
     "where the position $(i,j)$ of a color matrix are given by\n",
     "\n",
@@ -269,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -358,11 +366,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python2.7/dist-packages/Bio/Seq.py:345: BiopythonDeprecationWarning: This method is obsolete; please use str(my_seq) instead of my_seq.tostring().\n",
+      "  BiopythonDeprecationWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "# All the plant sequences\n",
     "Plant_sequences = {}\n",
@@ -387,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -416,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -445,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -477,7 +492,7 @@
     "| _**Bacterium**_ | *Anaplasma phagocytophilum <br/> Neisseria gonorrhoeae <br/> Streptococcus pyogenes* | CP000235.1 <br/> CP016017.1 <br/> CP003116.1 |  1471282 <br/> 942943 <br/> 1750832 |\n",
     "\n",
     "\n",
-    "<center>**Table 2.** Species description </center>"
+    "<center>Table 2. Species description </center>"
    ]
   },
   {
@@ -493,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +601,7 @@
       "['acctta', 'caattc', 'aggcaa', 'cacaga', 'gagcga', 'atcatc', 'tagata', 'agcccc', 'cgaaaa', 'gtagta', 'cggacc', 'ccggga', 'acacgc']\n",
       "\n",
       "The noncrosshybridizing set with n=8\n",
-      "['actagatc', 'acacatgt', 'gcgtcgta', 'gtaggtgg', 'gctaaaag', 'gatccccg', 'aacaatca', 'gtgccaac', 'ccaaatta', 'cagttcaa', 'catcgcta', 'gcccggac', 'tcagcaga', 'gaaaggca', 'acgttacc', 'acagtgtg']\n"
+      "['cttgttaa', 'ggcagaac', 'ggatcgtg', 'gtgcggag', 'gattcacc', 'attactga', 'aaccccga', 'atgtttgg', 'gatctcag', 'aagcgtca', 'tagttgta', 'aaaaggac', 'agtctata', 'ggtacccg', 'ccatgcga', 'cgacttgg']\n"
      ]
     }
    ],
@@ -622,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -630,13 +645,13 @@
      "output_type": "stream",
      "text": [
       "The noncrosshybridizing set with n=6 fixed\n",
-      "['cgaaaa' 'acctta' 'cggacc' 'aggcaa' 'aggcaa' 'acacgc' 'ccggga' 'caattc'\n",
-      " 'tagata' 'ccggga' 'caattc' 'cacaga' 'acctta'] , with lenght:  13\n",
+      "['atcatc' 'cacaga' 'cacaga' 'acctta' 'cgaaaa' 'agcccc' 'cgaaaa' 'gtagta'\n",
+      " 'cacaga' 'ccggga' 'cacaga' 'cgaaaa' 'cgaaaa'] , with lenght:  13\n",
       "\n",
       "The noncrosshybridizing set with n=8 fixed\n",
-      "['gtaggtgg' 'actagatc' 'catcgcta' 'gaaaggca' 'gatccccg' 'gtgccaac'\n",
-      " 'ccaaatta' 'gcgtcgta' 'acacatgt' 'acgttacc' 'tcagcaga' 'gatccccg'\n",
-      " 'gtaggtgg'] , with lenght:  13\n"
+      "['ccatgcga' 'cgacttgg' 'cgacttgg' 'tagttgta' 'agtctata' 'aaccccga'\n",
+      " 'gatctcag' 'ggtacccg' 'agtctata' 'cgacttgg' 'ggtacccg' 'ggatcgtg'\n",
+      " 'cgacttgg'] , with lenght:  13\n"
      ]
     }
    ],
@@ -666,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -731,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -756,6 +771,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "___\n",
+    "\n",
+    "### Plant\n",
+    "\n",
+    "** id: CM007908.1, Name: Helianthus annuus mitochondrion** \n",
+    "<img src=\"Images/Results/CM007908.1.jpg\" width=\"400\">\n",
+    "\n",
+    "** id: KU865690.1, Name: Hordeum vulgare mitochondrion** \n",
+    "<img src=\"Images/Results/KU865690.1.jpg\" width=\"400\">\n",
+    "\n",
+    "** id: CM007908.1, Name: Triticum aestivum mitochondrion** \n",
+    "<img src=\"Images/Results/NC_036024.1.jpg\" width=\"400\">\n",
+    "\n",
+    "___\n",
+    "\n",
+    "### Virus\n",
+    "\n",
+    "** id: NC_003391.1, Name: Camelpox virus** \n",
+    "<img src=\"Images/Results/NC_003391.1.jpg\" width=\"400\">\n",
+    "\n",
+    "** id: NC_005309.1, Name: Canarypox virus** \n",
+    "<img src=\"Images/Results/NC_005309.1.jpg\" width=\"400\">\n",
+    "\n",
+    "** id: L22579.1, Name: Variola major virus** \n",
+    "<img src=\"Images/Results/L22579.1.jpg\" width=\"400\">\n",
+    "\n",
+    "___\n",
+    "\n",
+    "\n",
+    "### Fungi\n",
+    "\n",
+    "** id: NC_021750.1, Name: Ganoderma lucidum mitochondrion** \n",
+    "<img src=\"Images/Results/NC_021750.1.jpg\" width=\"400\">\n",
+    "\n",
+    "** id: NC_018365.1, Name: Lentinula edodes mitochondrion** \n",
+    "<img src=\"Images/Results/NC_018365.1.jpg\" width=\"400\">\n",
+    "\n",
+    "** id: EF204913.1, Name: Pleurotus ostreatus mitochondrion** \n",
+    "<img src=\"Images/Results/EF204913.1.jpg\" width=\"400\">\n",
+    "\n",
+    "___\n",
+    "\n",
+    "### Bacterium\n",
+    "\n",
+    "** id: CP000235.1, Name: Bacterium \tAnaplasma phagocytophilum** \n",
+    "<img src=\"Images/Results/CP000235.1.jpg\" width=\"400\">\n",
+    "\n",
+    "** id: CP016017.1, Name: Neisseria gonorrhoeae** \n",
+    "<img src=\"Images/Results/CP016017.1.jpg\" width=\"400\">\n",
+    "\n",
+    "** id: CP003116.1, Name: Streptococcus pyogenes** \n",
+    "<img src=\"Images/Results/CP003116.1.jpg\" width=\"400\">\n",
+    "___\n",
+    "\n",
+    "\n",
     "### C. Comparison Between species\n",
     "| |\n",
     "|:-|:----------------------------------:|:-----------------------------:|:----------------------------------------:|\n",
@@ -763,7 +833,7 @@
     "|**Virus**| <img src=\"Images/Results/NC_003391.1.jpg\" width=\"400\">  _Camelpox virus_ | <img src=\"Images/Results/NC_005309.1.jpg\" width=\"400\"> _Canarypox virus_ | <img src=\"Images/Results/L22579.1.jpg\" width=\"400\"> _Variola major virus_ |\n",
     "|**Fungi**| <img src=\"Images/Results/NC_021750.1.jpg\" width=\"400\">  _Ganoderma lucidum mitochondrion_ | <img src=\"Images/Results/NC_018365.1.jpg\" width=\"400\"> _Lentinula edodes mitochondrion_ | <img src=\"Images/Results/EF204913.1.jpg\" width=\"400\"> _Pleurotus ostreatus mitochondrion_ |\n",
     "|**Bacterium**| <img src=\"Images/Results/CP000235.1.jpg\" width=\"400\">  _Anaplasma phagocytophilum_ | <img src=\"Images/Results/NC_005309.1.jpg\" width=\"400\"> _Neisseria gonorrhoeae_ | <img src=\"Images/Results/CP003116.1.jpg\" width=\"400\"> _Streptococcus pyogenes_ |\n",
-    "<center>**Table 3.** The images that represent each DNA sequence </center>\n",
+    "<center>Table 3. The images that represent each DNA sequence </center>\n",
     "\n",
     "The images of each individual can observe a distinction between the different species of the dataset, although  it is observed that the species Fungi and Virus appear in some image patterns. This may be because both species can share part of the genetic information in various parts of their genome.\n",
     "\n",
@@ -776,7 +846,8 @@
    "source": [
     "<h3><center>5. Conclusions and Future work</center></h3>\n",
     "\n",
-    "A new methodology for find a image representation of a DNA sequence has been described which uses the Noncrosshybridizing sets(The Codeword Design problem) in the DNA spaces to get the best"
+    "A new methodology for find a image representation of a DNA sequence has been described which uses the Noncrosshybridizing sets(The Codeword Design problem) in the DNA spaces to get the best.\n",
+    "\n"
    ]
   },
   {
