--- a/DNA_Visualization - Documentation.ipynb
+++ b/DNA_Visualization - Documentation.ipynb
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -300,12 +300,9 @@
     "# https://docs.python.org/2/library/random.html\n",
     "import random\n",
     "\n",
-    "# Matplotlib: is a Python 2D plotting library which produces publication quality figures in a variety \n",
-    "# of hardcopy formats and interactive environments across platforms. Matplotlib can be used in Python scripts, \n",
-    "# the Python and IPython shell, the jupyter notebook, web application servers, and four graphical user interface \n",
-    "# toolkits.\n",
-    "# https://matplotlib.org/\n",
-    "import matplotlib.pyplot as plt\n",
+    "# Scipy: Is a Python-based ecosystem of open-source software for mathematics, science, and engineering. \n",
+    "# https://www.scipy.org/\n",
+    "import scipy.misc\n",
     "\n",
     "# Numpy: Is the fundamental package for scientific computing with Python. It contains among other things:\n",
     "#    - a powerful N-dimensional array object\n",
@@ -366,18 +363,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python2.7/dist-packages/Bio/Seq.py:345: BiopythonDeprecationWarning: This method is obsolete; please use str(my_seq) instead of my_seq.tostring().\n",
-      "  BiopythonDeprecationWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# All the plant sequences\n",
     "Plant_sequences = {}\n",
@@ -637,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -681,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -746,10 +734,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 17,
+   "metadata": {},
    "outputs": [],
    "source": [
     "for key in CompleteDatasetRGBMatrix:\n",
@@ -764,6 +750,8 @@
     "    \n",
     "    key = str(key)\n",
     "    CompleteDatasetRGBMatrix[key][\"RGB_matrix\"] = rgbArray\n",
+    "    \n",
+    "    \n",
     "    scipy.misc.imsave(\"Images/Results/\" + key + '.jpg', rgbArray)"
    ]
   },
@@ -771,61 +759,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "___\n",
-    "\n",
-    "### Plant\n",
-    "\n",
-    "** id: CM007908.1, Name: Helianthus annuus mitochondrion** \n",
-    "<img src=\"Images/Results/CM007908.1.jpg\" width=\"400\">\n",
-    "\n",
-    "** id: KU865690.1, Name: Hordeum vulgare mitochondrion** \n",
-    "<img src=\"Images/Results/KU865690.1.jpg\" width=\"400\">\n",
-    "\n",
-    "** id: CM007908.1, Name: Triticum aestivum mitochondrion** \n",
-    "<img src=\"Images/Results/NC_036024.1.jpg\" width=\"400\">\n",
-    "\n",
-    "___\n",
-    "\n",
-    "### Virus\n",
-    "\n",
-    "** id: NC_003391.1, Name: Camelpox virus** \n",
-    "<img src=\"Images/Results/NC_003391.1.jpg\" width=\"400\">\n",
-    "\n",
-    "** id: NC_005309.1, Name: Canarypox virus** \n",
-    "<img src=\"Images/Results/NC_005309.1.jpg\" width=\"400\">\n",
-    "\n",
-    "** id: L22579.1, Name: Variola major virus** \n",
-    "<img src=\"Images/Results/L22579.1.jpg\" width=\"400\">\n",
-    "\n",
-    "___\n",
-    "\n",
-    "\n",
-    "### Fungi\n",
-    "\n",
-    "** id: NC_021750.1, Name: Ganoderma lucidum mitochondrion** \n",
-    "<img src=\"Images/Results/NC_021750.1.jpg\" width=\"400\">\n",
-    "\n",
-    "** id: NC_018365.1, Name: Lentinula edodes mitochondrion** \n",
-    "<img src=\"Images/Results/NC_018365.1.jpg\" width=\"400\">\n",
-    "\n",
-    "** id: EF204913.1, Name: Pleurotus ostreatus mitochondrion** \n",
-    "<img src=\"Images/Results/EF204913.1.jpg\" width=\"400\">\n",
-    "\n",
-    "___\n",
-    "\n",
-    "### Bacterium\n",
-    "\n",
-    "** id: CP000235.1, Name: Bacterium \tAnaplasma phagocytophilum** \n",
-    "<img src=\"Images/Results/CP000235.1.jpg\" width=\"400\">\n",
-    "\n",
-    "** id: CP016017.1, Name: Neisseria gonorrhoeae** \n",
-    "<img src=\"Images/Results/CP016017.1.jpg\" width=\"400\">\n",
-    "\n",
-    "** id: CP003116.1, Name: Streptococcus pyogenes** \n",
-    "<img src=\"Images/Results/CP003116.1.jpg\" width=\"400\">\n",
-    "___\n",
-    "\n",
-    "\n",
     "### C. Comparison Between species\n",
     "| |\n",
     "|:-|:----------------------------------:|:-----------------------------:|:----------------------------------------:|\n",
@@ -837,7 +770,7 @@
     "\n",
     "The images of each individual can observe a distinction between the different species of the dataset, although  it is observed that the species Fungi and Virus appear in some image patterns. This may be because both species can share part of the genetic information in various parts of their genome.\n",
     "\n",
-    "It is also noted that the plants are the differentiating species within the data set, no pattern is shown with them and therefore it is easy to differentiate it with the naked eye."
+    "It is also noted that the plants are the differentiating species within the data set, no pattern is shown with them and therefore it is easy to differentiate it with the naked eye. This lack of patterns is due to the fact that the noncrosshybridizing set is hybridizing uniformly with the Shreeding sequence throughout the whole individual."
    ]
   },
   {
@@ -846,7 +779,15 @@
    "source": [
     "<h3><center>5. Conclusions and Future work</center></h3>\n",
     "\n",
-    "A new methodology for find a image representation of a DNA sequence has been described which uses the Noncrosshybridizing sets(The Codeword Design problem) in the DNA spaces to get the best.\n",
+    "A new methodology for find a image representation of a DNA sequence has been described which uses the Noncrosshybridizing sets(The Codeword Design problem) in the DNA spaces to get the best. \n",
+    "\n",
+    "The new DNA-based technique for species identification offers several other advantages. First, it is much more effectively in terms of cost and time than by traditional methods using traditional sophisticated bioinformatic analysis. Also, the method used herein can be readily extended to whole-genomes and thus applicable to arbitrary organisms\n",
+    "\n",
+    "Using a metric approximation of the Gibbs energy, the **h-distance**, affords a good deal of insight into the structure of DNA spaces and reasonable avenues into the codeword design problem and then can be readily applied in many applications in DNA computing, self-assembly, Natural Language Processing and **DNA visualization** among others.\n",
+    "\n",
+    "The proposed model can be fully scalable for DNA spaces larger than 8-mers using a metric as the **h-distance**. Using this larger space, the images can be take more of the hybridizations properties of the space. \n",
+    "\n",
+    "It is possible to define additional or more specialized ways to make the species identification. Such as machine learning algorithms to [image classification](https://medium.com/@tifa2up/image-classification-using-deep-neural-networks-a-beginner-friendly-approach-using-tensorflow-94b0a090ccd4).\n",
     "\n"
    ]
   },
