--- a/DNA_Visualization - Documentation.ipynb
+++ b/DNA_Visualization - Documentation.ipynb
@@ -5,9 +5,9 @@
    "metadata": {},
    "source": [
     "<h1><center>DNA Visualization</center></h1>\n",
-    "<h3><div style=\"text-align: right\"> Universidad Nacional de Colombia, Bogotá, Colombia </div></h3>\n",
-    "<h3><div style=\"text-align: right\"> [Visual Computing](https://visualcomputing.github.io/) </div></h3>\n",
-    "<h4><div style=\"text-align: right\"> Jeisson Andres Prieto Velandia - [japrietov@unal.edu.co](https://www.linkedin.com/in/jeisson-prieto/) </div></h4>"
+    "### Universidad Nacional de Colombia, Bogotá, Colombia </div></h3>\n",
+    "### [Visual Computing](https://visualcomputing.github.io/)\n",
+    "#### [Jeisson Andres Prieto Velandia](https://www.linkedin.com/in/jeisson-prieto/) - japrietov@unal.edu.co"
    ]
   },
   {
@@ -726,8 +726,7 @@
     "    \n",
     "    # print CompleteDatasetShreeding[key][\"description\"], \" | \", RedLight.shape, \" | \", BlueLight.shape,  \" | \", GreenLight.shape\n",
     "    CompleteDatasetRGBMatrix[key] = {\"description\" : CompleteDatasetShreeding[key][\"description\"], \\\n",
-    "                                    \"RedLight\" : RedLight, \"BlueLight\": BlueLight, \"GreenLight\": GreenLight}\n",
-    "    "
+    "                                    \"RedLight\" : RedLight, \"BlueLight\": BlueLight, \"GreenLight\": GreenLight}"
    ]
   },
   {
@@ -857,7 +856,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 2.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
@@ -868,5 +867,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 0
 }
