--- a/DNA_Visualization - Documentation.ipynb
+++ b/DNA_Visualization - Documentation.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "<h1><center>DNA Visualization</center></h1>\n",
-    "### Universidad Nacional de Colombia, Bogotá, Colombia </div></h3>\n",
+    "### Universidad Nacional de Colombia, Bogotá, Colombia\n",
     "### [Visual Computing](https://visualcomputing.github.io/)\n",
     "#### [Jeisson Andres Prieto Velandia](https://www.linkedin.com/in/jeisson-prieto/) - japrietov@unal.edu.co"
    ]
